[project]
name = "rylox"
version = "0.1.0"
description = "Local, deterministic repository context engine — turns a codebase + task into a token-budgeted markdown context package."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "Rylox contributors" }]
keywords = ["retrieval", "code-search", "context-engine", "rag", "llm-tooling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "typer>=0.12,<1.0",
    "tree-sitter>=0.21,<0.22",
    "tree-sitter-python>=0.21,<0.22",
    "faiss-cpu>=1.7.4,<2.0",
    "rank-bm25>=0.2.2,<0.3",
    "sentence-transformers>=2.7,<3.0",
    "onnxruntime>=1.17,<2.0",
    "tomli>=2.0,<3.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[project.scripts]
rylox = "rylox.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rylox"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    # UP045 suggests `X | None` over `Optional[X]`. That syntax is only
    # runtime-valid on Python 3.10+, but Typer calls get_type_hints() at
    # import time to build the CLI, which forces real evaluation of every
    # annotation — so on the declared Python 3.9 floor this breaks the
    # whole CLI at startup. Keep typing.Optional until the floor moves to 3.10.
    "UP045",
]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic pattern is `param: T = typer.Option(...)` in the function
# signature itself — that's what makes options self-documenting via --help.
# B008 (no function calls in defaults) is a false positive for this file.
"src/rylox/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.9"
strict = true
packages = ["rylox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: fast isolated unit tests",
    "regression: golden-set retrieval quality tests",
    "integration: full CLI round-trip tests",
]